--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -3650,20 +3650,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "私の心を象りし､甘美なる供物｡その漆黒に誘われるは､深紅の果実か…それとも､汝か｡…えっと､OOﾌﾟﾛﾃﾞｭｰｻｰの喜ぶ顔が見たくて…手作りしてみたの｡受け取って…くれますか?",
-                        "comments_my_1": "(ん～! ﾁｮｺﾚｰﾄのいい香り♪)",
-                        "comments_my_2": "密やかな逢瀬ね…(ﾄﾞｷﾄﾞｷ…♪)",
-                        "comments_my_3": "盟友の証､我が友に捧げよう!",
-                        "comments_my_4": "無情にも､約束の刻は迫る…(遅刻しなくて良かった～!)",
-                        "comments_my_max": "真なる力を解放し､創造したわ｡我が友OOのために!",
-                        "comments_work_1": "だって､愛を紡ぐ日だもの…♪",
-                        "comments_work_2": "覗き見るは､甘美な誘惑…",
-                        "comments_work_3": "さぁ…渇望せよ! (どうぞ♪)",
-                        "comments_work_4": "薔薇色に染まる､我が頬…! (うぅ､顔が熱いよ～…!)",
-                        "comments_work_max": "この身が凍てつこうと､込めた熱までは､奪わせはしないから…",
-                        "comments_work_love_up": "聖なる灯りが､我らを祝福している…! (夜景…ｷﾚｲですね♪)",
-                        "comments_live": "一口で､虜となるわ!",
-                        "comments_love_max": "盟約を交わしてなお…甘き鼓動は､高まるばかり! (うぅ～…OOﾌﾟﾛﾃﾞｭｰｻｰに､美味しいって言ってほしいなぁ…!)"
+                        "comment": "나의 마음을 본뜬, 감미로운 공물. 그 칠흑에 이끌리는 것은, 진홍의 과실인가… 아니면, 그대인가…저기, OO프로듀서의 기뻐하는 얼굴이 보고 싶어서… 직접 만들어 봤어. 받아…주실래요?",
+                        "comments_my_1": "(음～! 초콜렛 좋은 향기♪)",
+                        "comments_my_2": "은밀한 밀회네…(두근두근…♪)",
+                        "comments_my_3": "맹우의 증표, 나의 벗에게 바친다!",
+                        "comments_my_4": "무정하게도, 약속의 시간은 다가온다… (지각하지 않아서 다행이다～!)",
+                        "comments_my_max": "진정한 힘을 해방하고, 창조했다. 나의 벗 OO을 위해!",
+                        "comments_work_1": "그치만, 사랑을 잣는 날인걸…♪",
+                        "comments_work_2": "엿보기는, 감미로운 유혹…",
+                        "comments_work_3": "자아…갈망하라! (부디♪)",
+                        "comments_work_4": "장밋빛으로 물드는, 나의 뺨…! (우으, 얼굴이 뜨거워～…!)",
+                        "comments_work_max": "이 몸이 얼어붙더라도, 담아넣은 열까지는, 빼앗기게 하지 않으니까…",
+                        "comments_work_love_up": "성스러운 불빛이, 우리를 축복하고 있다…! (야경… 이쁘네요♪)",
+                        "comments_live": "한 입으로, 사로잡힐거야!",
+                        "comments_love_max": "맹약을 주고받아 더욱…달콤한 고동은, 높아만질 뿐! (우으～…OO프로듀서가, 맛있다고 해주면 좋겠다…!)"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2459701/idolcomment.mp3",
@@ -3730,20 +3730,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "秘めたる刻に綾なすは､乙女の無垢な祈りに､禁断の甘き魔法｡視線を交わし…盃を満たす､聖なる祝福を捧げよ! (鏡越しじゃなくて､本物の私に､言葉をかけてほしいな…♪)",
-                        "comments_my_1": "(ん～! ﾁｮｺﾚｰﾄのいい香り♪)",
-                        "comments_my_2": "密やかな逢瀬ね…(ﾄﾞｷﾄﾞｷ…♪)",
-                        "comments_my_3": "貴方の瞳に映る私を､唱えて…",
-                        "comments_my_4": "見よ､金の星が浮かんでいるわ! (金箔入りですごｰい!)",
-                        "comments_my_max": "秘すれば､暴きたくなるのが人の性…我が友OOも?",
-                        "comments_work_1": "だって､愛を紡ぐ日だもの…♪",
-                        "comments_work_2": "覗き見るは､甘美な誘惑…",
-                        "comments_work_3": "結界を破りし者､迎え入れよう!",
-                        "comments_work_4": "真実を写せし鏡…私は今､どんな顔をしている? (ﾊﾞｯﾁﾘ～♪)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰになら…真の姿を､見られてもいいの",
-                        "comments_work_love_up": "我が友も､魅入られるであろう! (ﾘｯﾌﾟ型のﾁｮｺﾚｰﾄ…可愛い♪)",
-                        "comments_live": "未だ､完全形態にあらず!",
-                        "comments_love_max": "秘めやかに素顔を彩るのは､なりたい自分になるため｡OOﾌﾟﾛﾃﾞｭｰｻｰが､可愛いって言ってくれるような私に…♪"
+                        "comment": "비밀스러운 시간에 아름다운 무늬를 이루는 것은, 소녀의 무구한 기도에, 금단의 달콤한 마법. 시선을 교환하고… 잔을 채우는 성스러운 축복을 바쳐라! (거울너머가 아니라, 진짜의 나에게, 말걸어줬으면 좋겠다…♪)",
+                        "comments_my_1": "(음～! 초콜렛 좋은 향기♪)",
+                        "comments_my_2": "은밀한 밀회네…(두근두근…♪)",
+                        "comments_my_3": "당신의 눈동자에 비치는 나를, 불러줘…",
+                        "comments_my_4": "보라, 금빛의 별이 떠오르고 있다! (금박 입혀져서 굉장-해!)",
+                        "comments_my_max": "숨기면, 파헤치고 싶어지는 것이 사람의 성…나의 벗 OO도?",
+                        "comments_work_1": "그치만, 사랑을 잣는 날인걸…♪",
+                        "comments_work_2": "엿보기는, 감미로운 유혹…",
+                        "comments_work_3": "결계를 깨뜨린 자, 맞아 들이자!",
+                        "comments_work_4": "진실을 비추는 거울… 나는 지금, 어떤 얼굴을 하고 있지? (문제없음～♪)",
+                        "comments_work_max": "OO프로듀서에게라면… 진정한 모습을, 보여줘도 좋아",
+                        "comments_work_love_up": "나의 벗도, 매료되겠지! (립스틱 모양 초콜렛…귀여워♪)",
+                        "comments_live": "아직, 완전형태는 아니다!",
+                        "comments_love_max": "비밀스럽게 민낯을 꾸미는 것은, 되고싶은 자신이 되기 위함. OO프로듀서가, 귀엽다고 말해줄 것 같은 나로…♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2559702/idolcomment.mp3",
@@ -3809,20 +3809,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "白き衣を纏って､再び貴方と見える…ﾌﾌ､運命とは斯くも可笑しなものね｡けれど…望まれるのならば､誓いましょう｡我が魂は無垢なる天へと還り､永遠の言霊をもって地上へと現れると…｡",
-                        "comments_my_1": "あの日の契りは続いているわ…",
-                        "comments_my_2": "貴方の想いを､私に見せて…",
-                        "comments_my_3": "天に捧げしは…永久の誓い",
-                        "comments_my_4": "黒衣でなくとも､我が魂は不変｡だって､私は…私だから…!",
-                        "comments_my_max": "如何なる時も想っていて…? これは､貴方との物語だから",
-                        "comments_work_1": "物語は続いていく…これからも",
-                        "comments_work_2": "幸福の刹那を､貴方へ…",
-                        "comments_work_3": "(結婚式って幸せいっぱい…♪)",
-                        "comments_work_4": "不可能な結末? …いえ｡叶えられるわ｡この青い薔薇のように",
-                        "comments_work_max": "貴方となら､どんな幸福も紡いでいけるわ｡何度でも…",
-                        "comments_work_love_up": "純白に秘めたるは貴方への想い…そのっ､花嫁の秘めごとよ…!",
-                        "comments_live": "祝福の宴を始めましょう",
-                        "comments_love_max": "かつて心震わせた物語は紡がれ続け､今もこの胸に息づいている｡OOﾌﾟﾛﾃﾞｭｰｻｰ､誓って? 私と､永久に未来を紡ぐと"
+                        "comment": "백의를 입고, 다시 당신처럼 보이는… 후후, 운명이란건 이렇게도 이상한 것이네. 하지만… 원한다면 맹세하죠. 나의 영혼은 무구한 하늘로 돌아가, 영원한 언령을 가지고 지상으로 나타난다고…",
+                        "comments_my_1": "그 날의 약속은 계속되고 있어…",
+                        "comments_my_2": "당신의 마음을, 나에게 보여줘…",
+                        "comments_my_3": "하늘에 바치는 것은… 영원한 맹세",
+                        "comments_my_4": "흑의가 아니어도, 나의 영혼은 불변. 왜냐하면, 나는… 나니까…!",
+                        "comments_my_max": "어떤 때에도 생각하고 있어…? 이건, 당신과의 이야기니까",
+                        "comments_work_1": "이야기는 이어져 간다… 앞으로도",
+                        "comments_work_2": "행복의 순간을, 당신에게…",
+                        "comments_work_3": "(결혼식이라니 행복 한가득…♪)",
+                        "comments_work_4": "불가능한 결말? …아니. 이룰 수 있어. 이 푸른 장미처럼",
+                        "comments_work_max": "당신과 함께라면, 어떤 행복이라도 자아갈 수 있어. 몇번이라도…",
+                        "comments_work_love_up": "순백에 감춰진 것은 당신을 향한 마음… 저기, 신부의 비밀이야…!",
+                        "comments_live": "축복의 연회를 시작하죠",
+                        "comments_love_max": "일찍이 마음을 울렸던 이야기들은 만들어지고 만들어져서, 지금도 이 가슴에 살아 숨쉬고 있어. OO프로듀서, 맹세해? 나와, 영원한 미래를 만들어 가겠다고"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/idolcomment.mp3",
@@ -3889,20 +3889,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "両翼をもがれた蝶が､それでも尚､天を求めるように…私も求めているの｡魂の片割れ｡失ってはならない人｡だから此処で待ち続けるわ｡再び祝福の鐘が鳴り響く､その日まで…永久に…",
-                        "comments_my_1": "あの日の契りは続いているわ…",
-                        "comments_my_2": "貴方の想いを､私に見せて…",
-                        "comments_my_3": "覚醒めて､愛しい人よ…",
-                        "comments_my_4": "あの日誓った言葉は…禁断? けれど､この想いは偽れない…",
-                        "comments_my_max": "貴方なら､わかるでしょう? 私の心を塗りつぶす黒き闇を…",
-                        "comments_work_1": "物語は続いていく…これからも",
-                        "comments_work_2": "幸福の刹那を､貴方へ…",
-                        "comments_work_3": "これが審判だと言うのなら…",
-                        "comments_work_4": "信じているわ｡たとえこの身が朽ちて､想いだけになろうとも",
-                        "comments_work_max": "どんな声も､この憂いを拭うことはできない｡貴方でなければ…",
-                        "comments_work_love_up": "指先から伝えてほしい…｡あの人の想い､純然な魂の行き先を…",
-                        "comments_live": "どうか返して｡我が半身…",
-                        "comments_love_max": "幾度の夜を超えても､待ち続けるわ｡我が手を優しく包む､かの人が現れるまで｡夜の帳を､貴方が明けてくれる､その日まで…"
+                        "comment": "양날개가 꺾인 나비가, 그러더라도 더욱, 하늘을 바라듯이… 나도 바라고 있어. 영혼의 나머지 조각. 잃어서는 안 되는 사람. 그러니까 여기서 계속 기다리고 있어. 다시 축복의 종이 울려 퍼지는, 그 날까지… 영원히…",
+                        "comments_my_1": "그 날의 약속은 계속되고 있어…",
+                        "comments_my_2": "당신의 마음을, 나에게 보여줘…",
+                        "comments_my_3": "깨어나주세요, 사랑스러운 사람이여…",
+                        "comments_my_4": "그날 약속했던 말은… 금단? 하지만, 이 마음은 속이지 않아…",
+                        "comments_my_max": "당신이라면, 알겠죠? 나의 마음을 가득 채워 짓누르는 검은 어둠을…",
+                        "comments_work_1": "이야기는 이어져 간다… 앞으로도",
+                        "comments_work_2": "행복의 순간을, 당신에게…",
+                        "comments_work_3": "이것이 심판이라고 말한다면…",
+                        "comments_work_4": "믿고 있어. 설령 이 몸이 썩어서, 마음만 남게 된다 해도",
+                        "comments_work_max": "어떤 목소리로도, 이 슬픔을 씻어내는 건 불가능해. 당신이 아니라면…",
+                        "comments_work_love_up": "손끝에서 전해지면 좋겠다… 그 사람의 마음, 순전한 영혼의 행선지를…",
+                        "comments_live": "제발 돌려줘. 나의 반신…",
+                        "comments_love_max": "몇 번의 밤을 넘어도 계속 기다릴게. 나의 손을 부드럽게 감싸줄, 어떤 사람이 나타날 때까지. 밤의 장막을, 당신이 밝혀줄, 그 날까지…"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/idolcomment.mp3",
