--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4271,7 +4271,7 @@ kg
                     }
                 }, {
                     "story_id": "53",
-                    "story_title": "秋風温泉&WONDERFUL M@GIC!!復刻",
+                    "story_title": "추풍 온천&WONDERFUL M@GIC!!복각",
                     "voice_enable": {
                         "0": "1",
                         "3": "1"
