--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4217,7 +4217,7 @@ kg
                     }
                 }, {
                     "story_id": "121",
-                    "story_title": "新春あけおめ振袖",
+                    "story_title": "신춘 새해복받으세요 후리소데",
                     "voice_enable": {
                         "0": "1",
                         "3": "1"
