--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4244,7 +4244,7 @@ kg
                     }
                 }, {
                     "story_id": "85",
-                    "story_title": "憧れのブライダルセレクション",
+                    "story_title": "동경의 브라이덜 셀렉션",
                     "voice_enable": {
                         "1": "1",
                         "4": "1"
