--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4298,7 +4298,7 @@ kg
                     }
                 }, {
                     "story_id": "26",
-                    "story_title": "WONDERFUL M@GIC!! 第2幕",
+                    "story_title": "WONDERFUL M@GIC!! 제2막",
                     "voice_enable": {
                         "0": "1",
                         "2": "1"
