--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4119,7 +4119,7 @@ kg
                     },
                     "movie_name_voice": {
                         "1": "../../image_sp/ui/episode/epi_button_moviename_cool_early.png",
-                        "3": "../../image_sp/ui/episode/epi_button_moviename_cool_late_gray.png"
+                        "3": "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"
                     }
                 }, {
                     "story_id": "397",
@@ -4342,7 +4342,7 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"]
                 }, {
                     "story_id": "3",
-                    "story_title": "アイドルプロデュース 夜空に咲く花火編",
+                    "story_title": "아이돌 프로듀스 밤하늘에 피는 불꽃놀이 편",
                     "voice_enable": ["1", "1", "1"],
                     "flash_path": ["../../idol_story/movie_play/003/1_k.html", 
                                    "../../idol_story/movie_play/003/2_k.html", 
