--- a/idol_story/movie_play/448/2_k.html
+++ b/idol_story/movie_play/448/2_k.html
@@ -81,7 +81,7 @@
                 for (var i = 0, len = lib.properties.manifest.length; i < len; i++) {
                     new_manifest[i] = {
                         'type': 'image',
-                        'src': window.image_server + encodeURIComponent(window.base_url + window.dir_name + lib.properties.manifest[i].src),
+                        'src': encodeURIComponent(window.dir_name + lib.properties.manifest[i].src),
                         'id': lib.properties.manifest[i].id
                     }
                 }
@@ -89,7 +89,7 @@
                 for (var i = 0, len = lib.properties.manifest.length; i < len; i++) {
                     new_manifest[i] = {
                         'type': 'image',
-                        'src': window.base_url + window.dir_name + lib.properties.manifest[i].src,
+                        'src': window.dir_name + lib.properties.manifest[i].src,
                         'id': lib.properties.manifest[i].id
                     }
                 }
