--- a/idol_story/movie_play/447/2.html
+++ b/idol_story/movie_play/447/2.html
@@ -110,13 +110,13 @@
         window.file_name = "story_generator_n1"; // createjs の本体ファイルを定義
         window.dir_name = "../../../image_sp/cjs/genechara/";
         window.voice_manifest = {
-            'scene1': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901049/8f2f6449d2950c5ab3ed81c9bd00672d.mp4',
-            'scene2': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901049/933282376af4bdece4b571c8e64c5ac7.mp4',
-            'scene3': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901049/14d69c3d38cab6e8ad0c281c463f2ba1.mp4',
-            'scene4': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901049/bb491c46e0f28d2500fe42ee9a6ae0a5.mp4',
-            'scene5': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901049/028b7c8e8a1f28421bf67082d7915155.mp4',
-            'scene6': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901049/8686bec8aa17f96e03359a965f461ef2.mp4',
-            'scene7': 'http://idolmaster.edgesuite.net/idolmaster/sound/9901049/a01da8aac62b1afec96f75cd25f29664.mp4',
+            'scene1': '../../../sound/9901049/scene1.mp3',
+            'scene2': '../../../sound/9901049/scene2.mp3',
+            'scene3': '../../../sound/9901049/scene3.mp3',
+            'scene4': '../../../sound/9901049/scene4.mp3',
+            'scene5': '../../../sound/9901049/scene5.mp3',
+            'scene6': '../../../sound/9901049/scene6.mp3',
+            'scene7': '../../../sound/9901049/scene7.mp3',
         };
         window._wrap_flag = 0;
         window._ua = window.navigator.userAgent;
