--- a/idol_story/movie_play/447/2.html
+++ b/idol_story/movie_play/447/2.html
@@ -59,8 +59,8 @@
             width: 40px;
         }
     </style>
-    <script type='text/javascript' src='../../../js/createjs.min.js%3Fv%3D20190925114611'></script>
-    <script type='text/javascript' src='../../../js/app_sound.js%3Fv%3D20200713144634'></script>
+    <script type='text/javascript' src='../../../js/createjs.min.js'></script>
+    <script type='text/javascript' src='../../../js/app_sound.js'></script>
     <script type='text/javascript' src='../../../js/cjs/story_generator/story_generator_n1.js' crossorigin="anonymous"></script>
     <script type='text/javascript' src='../../../js/cjs/story_generator/effects/eff_sweat_fly.js' crossorigin="anonymous"></script>
     <script type='text/javascript' src='../../../js/cjs/story_generator/effects/eff_notice.js' crossorigin="anonymous"></script>
