--- a/idol_story/movie_play/447/2.html
+++ b/idol_story/movie_play/447/2.html
@@ -2468,9 +2468,9 @@
         window.chara_replace_images['c1_face1'] = '../../../image_sp/card/cm/2200601.png';
         window.chara_replace_images['c1_face10'] = '../../../image_sp/card/cm_face/2200601_10.png';
         window.chara_replace_images['c1_face1'] = '../../../image_sp/card/cm/2200601.png';
-        window.chara_replace_images['c1_face9'] = '../../../../../../../../../../../../image_sp/card/cm_face/2200601_9.png';
-        window.chara_replace_images['c1_face7'] = '../../../../../../../../../image_sp/card/cm_face/2200601_7.png';
-        window.chara_replace_images['c1_face2'] = '../../../../../../image_sp/card/cm_face/2200601_2.png';
+        window.chara_replace_images['c1_face9'] = '../../../image_sp/card/cm_face/2200601_9.png';
+        window.chara_replace_images['c1_face7'] = '../../../image_sp/card/cm_face/2200601_7.png';
+        window.chara_replace_images['c1_face2'] = '../../../image_sp/card/cm_face/2200601_2.png';
         window.chara_replace_images['c1_face5'] = '../../../image_sp/card/cm_face/2200601_5.png';
         window.chara_replace_images['c1_b'] = '../../../image_sp/card/cm_face/2200601_b.png';
         window.im_cjs.bg_frame_info = {
