--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4096,7 +4096,7 @@ kg
                 }];
                 idol.idol_story_list = [{
                     "story_id": "447",
-                    "story_title": "眩い夏に!緋玉と戦乙女のギャラクシー",
+                    "story_title": "눈부신 여름에! 비옥과 전쟁 소녀의 갤럭시",
                     "voice_enable": {
                         "1": "1",
                         "3": "1"
