--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4325,7 +4325,7 @@ kg
                     }
                 }, {
                     "story_id": "17",
-                    "story_title": "アイドルプロデュース 2周年編 神崎蘭子",
+                    "story_title": "아이돌 프로듀스 2주년편 칸자키 란코",
                     "voice_enable": ["1", "1", "1"],
                     "flash_path": ["../../idol_story/movie_play/017/1_k.html", 
                                    "../../idol_story/movie_play/017/2_k.html", 
