--- a/birthday/main.html
+++ b/birthday/main.html
@@ -212,6 +212,21 @@
                     </div>
                 </a>
             </div>
+            <div class="area_birthday jsOnBanner">
+                <a href='kiyomi2021.html' class="banner_birthday_renewal area_banner_wrap">
+                    <div class="text_area">9월26일</div>
+                    <div class="idol_lbirthday">
+                        <ul>
+                            <li><img src='../image_sp/card/xs/kiyomi_36.jpg' width="30"></li>
+                        </ul>
+                    </div>
+                    <div class="idol_lbirthday_text count_1">
+                        <div>
+                            키요미<br>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <script>
                 $(function() {
                     $('#jsBtnBreaBannerTriplicate').on('click', function(e) {
