--- a/idol_gallery/idol_detail/kiyomi_k.html
+++ b/idol_gallery/idol_detail/kiyomi_k.html
@@ -2764,7 +2764,7 @@ kg
                     "is_max_love": true
                 }, {
                     "data": {
-                        "card_name": "[진면목 바캉스]사에지마 키요미",
+                        "card_name": "[성실 바캉스]사에지마 키요미",
                         "rarity": "5",
                         "cost": "17",
                         "attribute": "passion",
@@ -2774,7 +2774,7 @@ kg
                         "default_attack": "4420",
                         "default_defense": "3360",
                         "hash_card_id": "84456974d34c4aa0710a83878d3ebaca",
-                        "alias_name": "진면목 바캉스",
+                        "alias_name": "성실 바캉스",
                         "real_name": "사에지마키요미"
                     },
                     "profile": {
@@ -2831,7 +2831,7 @@ kg
                     "release": "",
                     "trade_prohibition": {
                         "card_id": "3442301",
-                        "card_name": "[진면목 바캉스]사에지마 키요미",
+                        "card_name": "[성실 바캉스]사에지마 키요미",
                         "from": "2017\/08\/31\/18:00",
                         "to": "2017\/09\/11\/12:00",
                         "limitless_flag": "0",
@@ -2848,7 +2848,7 @@ kg
                     "is_max_love": true
                 }, {
                     "data": {
-                        "card_name": "[진면목 바캉스]사에지마 키요미+",
+                        "card_name": "[성실 바캉스]사에지마 키요미+",
                         "rarity": "6",
                         "cost": "17",
                         "attribute": "passion",
@@ -2858,7 +2858,7 @@ kg
                         "default_attack": "5304",
                         "default_defense": "4032",
                         "hash_card_id": "c58a7cce87b2602e10b100e358561a2c",
-                        "alias_name": "진면목 바캉스",
+                        "alias_name": "성실 바캉스",
                         "real_name": "사에지마키요미+"
                     },
                     "profile": {
@@ -2921,7 +2921,7 @@ kg
                     "release": "",
                     "trade_prohibition": {
                         "card_id": "3542302",
-                        "card_name": "[진면목 바캉스]사에지마 키요미+",
+                        "card_name": "[성실 바캉스]사에지마 키요미+",
                         "from": "2017\/08\/31\/18:00",
                         "to": "2017\/09\/11\/12:00",
                         "limitless_flag": "0",
@@ -2938,7 +2938,7 @@ kg
                     "is_max_love": true
                 }, {
                     "data": {
-                        "card_name": "[진면목 바캉스･S]사에지마 키요미",
+                        "card_name": "[성실 바캉스･S]사에지마 키요미",
                         "rarity": "5",
                         "cost": "20",
                         "attribute": "passion",
@@ -2948,7 +2948,7 @@ kg
                         "default_attack": "11950",
                         "default_defense": "10750",
                         "hash_card_id": "4631f0706acca0cd72bb928ea0508d5a",
-                        "alias_name": "진면목 바캉스･S",
+                        "alias_name": "성실 바캉스･S",
                         "real_name": "사에지마키요미"
                     },
                     "profile": {
@@ -3005,7 +3005,7 @@ kg
                     "release": "",
                     "trade_prohibition": {
                         "card_id": "3442401",
-                        "card_name": "[진면목 바캉스・S]사에지마 키요미",
+                        "card_name": "[성실 바캉스・S]사에지마 키요미",
                         "from": "2017\/08\/31\/18:00",
                         "to": "2030\/03\/11\/18:00",
                         "limitless_flag": "1",
@@ -3022,7 +3022,7 @@ kg
                     "is_max_love": true
                 }, {
                     "data": {
-                        "card_name": "[진면목 바캉스･S]사에지마 키요미+",
+                        "card_name": "[성실 바캉스･S]사에지마 키요미+",
                         "rarity": "6",
                         "cost": "20",
                         "attribute": "passion",
@@ -3032,7 +3032,7 @@ kg
                         "default_attack": "11950",
                         "default_defense": "10750",
                         "hash_card_id": "c5a1dae84e4ec491751ed4520b84f5d8",
-                        "alias_name": "진면목 바캉스･S",
+                        "alias_name": "성실 바캉스･S",
                         "real_name": "사에지마키요미+"
                     },
                     "profile": {
@@ -3089,7 +3089,7 @@ kg
                     "release": "",
                     "trade_prohibition": {
                         "card_id": "3542402",
-                        "card_name": "[진면목 바캉스・S]사에지마 키요미+",
+                        "card_name": "[성실 바캉스・S]사에지마 키요미+",
                         "from": "2017\/08\/31\/18:00",
                         "to": "2030\/03\/11\/18:00",
                         "limitless_flag": "1",
