--- a/mypage.html
+++ b/mypage.html
@@ -274,21 +274,9 @@
             <a class="btn_normal_line_2 " href='memory/unit_collection_detail/unit.html'><span style="font-size: 12px;">유닛(임시)</span></a>
             <a class="btn_normal_line_2 " href='memory/derepo/index.html'><span style="font-size: 12px;">데레포(임시)</span></a>
         </div>
-        <div class="t-Cnt m-Btm8">
-            <div class="area_banner_type_text jsOnBanner">
-                <div class="t-Cnt"><a href='memory/detail/1708/10020/Memory_index_1.html' class="banner_type_text" style='background-image:url(image_sp/event/1708/banner_event_01.png)'></a></div>
-            </div>
-        </div>
-        <div class="t-Cnt m-Btm8">
-            <div class="area_banner_type_text jsOnBanner">
-                <div class="t-Cnt"><a href='memory/detail/1711/10020/Memory_index_1.html' class="banner_type_text" style='background-image:url(image_sp/event/1711/banner_event_01.png)'></a></div>
-            </div>
-        </div>
-        <div class="t-Cnt m-Btm8">
-            <div class="area_banner_type_text jsOnBanner">
-                <div class="t-Cnt"><a href='event_challenge/index.html' class="banner_type_text" style='background-image:url(image_sp/event/1226/banner_event_01.png)'></a></div>
-            </div>
-        </div>
+                <a href='memory/detail/1708/10020/Memory_index_1.html' class="banner_type_text" style='background-image:url(image_sp/event/1708/banner_event_01.png)'></a>
+                <a href='memory/detail/1711/10020/Memory_index_1.html' class="banner_type_text" style='background-image:url(image_sp/event/1711/banner_event_01.png)'></a>
+                <a href='event_challenge/index.html' class="banner_type_text" style='background-image:url(image_sp/event/1226/banner_event_01.png)'></a>
         <div class="t-Cnt m-Btm8">
             <div class="area_banner_type_text jsOnBanner">
                 <div class="t-Cnt"><a href='memory/detail/1918/10030/index.html' class="banner_type_text" style='background-image:url(image_sp/event/1918/banner_event_01.png)'></a></div>
