--- a/mypage.html
+++ b/mypage.html
@@ -384,14 +384,12 @@
             </div>
         </section>
         <section class="t-Cnt">
-            <div class="jsOnBanner">
-            <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cinderella_history%3Fl_frm%3DMypage_index_1%26rnd%3D228978351' class="banner_type_text" style="background-image:url(image_sp/banner/attraction/11525694598987e2a161918d9dac91a3.png)">
-                </a></div>
-            <div class="jsOnBanner">
+            <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cinderella_history' class="banner_type_text" style="background-image:url(image_sp/banner/attraction/11525694598987e2a161918d9dac91a3.png)">
+                </a>
             <a href='refresh_room/index.html' class="banner_refresh_room">
             <img src='image_sp/ui/refresh_room/banner/25.png' class="banner_refresh_room_img">
                 <div class="banner_refresh_room_value">다시 보기</div>
-                </a></div>
+                </a>
             <div class="area_birthday jsOnBanner">
                 <a href='birthday/main.html' class="banner_birthday_renewal area_banner_wrap">
                     <div class="text_area"><span>다음</span>10월27일</div>
