--- a/mypage.html
+++ b/mypage.html
@@ -385,11 +385,11 @@
         </section>
         <section class="t-Cnt">
             <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cinderella_history' class="banner_type_text" style="background-image:url(image_sp/banner/attraction/11525694598987e2a161918d9dac91a3.png)">
-                </a>
-            <a href='refresh_room/index.html' class="banner_refresh_room">
-            <img src='image_sp/ui/refresh_room/banner/25.png' class="banner_refresh_room_img">
-                <div class="banner_refresh_room_value">다시 보기</div>
-                </a>
+            </a>
+            <a href='refresh_room/index.html' class="banner_refresh_room"><img src='image_sp/ui/refresh_room/banner/25.png' class="banner_refresh_room_img">
+                <div class="banner_refresh_room_value">다시 보기
+                </div>
+            </a>
             <div class="area_birthday jsOnBanner">
                 <a href='birthday/main.html' class="banner_birthday_renewal area_banner_wrap">
                     <div class="text_area"><span>다음</span>10월27일</div>
@@ -586,23 +586,6 @@
             idolArr['dialogue_info'] = [];
         </script>
         <script src="js/min/mypage.min.js"></script>
-        <div class="lBox">
-            <section id="newInfo" class="newInfoArea">
-                <div class="bg_popup_top area_popup_top">
-                    <a href="#" class="btn_popup_close ibox_close btn_close_01">
-                        <div></div>
-                    </a>
-                </div>
-                <div class="newInfoBody">
-                </div>
-                <div class="bg_popup_bottom area_popup_bottom">
-                    <a href="#" class="btn_popup_close_02 ibox_close btn_close_02">
-                        <div></div>
-                    </a>
-                </div>
-                <div></div>
-            </section>
-        </div>
         <script src="js/islider.js"></script>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
